finally made some strings in resource, hope you're happy, Android

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wind Speed Deduction Tool</string>
+    <string name="header_longitude">Longitude: </string>
+    <string name="header_latitude">Latitude: </string>
 </resources>
