wasted time skirting around the problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Wind Speed Deduction Tool</string>
     <string name="header_longitude">Longitude: </string>
     <string name="header_latitude">Latitude: </string>
+    <string name="appRootDir">windSpeedDeductionTool</string>
 </resources>
