committing before I break anything again (fucking resource strings)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="header_longitude">Longitude: </string>
     <string name="header_latitude">Latitude: </string>
     <string name="appRootDir">windSpeedDeductionTool</string>
+    <string name="photoReferencePrefix">photos_for_id_</string>
 </resources>
